--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusrules.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusrules.yaml
@@ -40,6 +40,15 @@ spec:
           spec:
             description: Specification of desired alerting rule definitions for Prometheus.
             properties:
+              annotations:
+                additionalProperties:
+                  type: string
+                description: 'Annotations is an unstructured key value map stored
+                  with a resource that may be set by external tools to store and retrieve
+                  arbitrary metadata. They are not queryable and should be preserved
+                  when modifying objects. They will be merged with the annotations
+                  in all the prometheus rules defined under Groups More info: http://kubernetes.io/docs/user-guide/annotations'
+                type: object
               groups:
                 description: Content of Prometheus rule file
                 items:
@@ -112,6 +121,15 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+              labels:
+                additionalProperties:
+                  type: string
+                description: 'Map of string keys and values that can be used to organize
+                  and categorize (scope and select) objects. May match selectors of
+                  replication controllers and services. They will be merged with the
+                  labels in all the prometheus rules defined under Groups More info:
+                  http://kubernetes.io/docs/user-guide/labels'
+                type: object
             type: object
         required:
         - spec
