--- a/bundle.yaml
+++ b/bundle.yaml
@@ -7196,7 +7196,7 @@ spec:
                   is being configured.
                 type: string
               imagePullPolicy:
-                description: Image pull policy for the 'prometheus', 'init-config-reloader'
+                description: Image pull policy for the 'alertmanager', 'init-config-reloader'
                   and 'config-reloader' containers. See https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
                   for more details.
                 enum:
